--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "level-2-assignment-3",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
+  "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src --ext .ts",
-    "fix": "eslint ./src --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fix": "eslint ./src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +16,12 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/express": "^5.0.3",
-    "@types/mongoose": "^5.11.96",
-    "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.1"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
