--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/mongoose": "^5.11.96",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
@@ -27,6 +28,7 @@
     "typescript-eslint": "^8.34.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "ts-node-dev": "^2.0.0"
